--- a/css/styles.css
+++ b/css/styles.css
@@ -1,195 +1,378 @@
 :root {
-    --main-text-color: #212121;
-    --second-text-color: #757575;
-    /* --main-background-color: #E5E5E5; */
-    --main-brand-color: #2196F3;
-    --second-background-color: #2F303A;
+  --main-text-color: #212121;
+  --second-text-color: #757575;
+  /* --main-background-color: #E5E5E5; */
+  --main-brand-color: #2196f3;
+  --second-background-color: #2f303a;
 }
-/* main*/
-body {
-    font-family: 'Roboto', sans-serif;
-    color: var(--main-text-color);
-    text-decoration: none;
-    letter-spacing: 0.03em;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+li {
+  margin: 0;
+  padding: 0;
 }
 
+/* main*/
+body {
+  font-family: 'Roboto', sans-serif;
+  color: var(--main-text-color);
+  text-decoration: none;
+  letter-spacing: 0.03em;
+}
+.container {
+  display: flex;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
 /* header */
+
+header .container {
+  align-items: center;
+}
+
+.navigation {
+  display: flex;
+}
 header {
-    background-color: #FFFFFF;
+  border-bottom: 1px solid #ececec;
+  background-color: #ffffff;
 }
 .logo {
-color: #000000;
-font-family: 'Raleway';
-font-weight: 700;
-font-size: 26px;
-line-height: 1.19;
-letter-spacing: 0.03em;
+  display: inline-block;
+  width: 145px;
+  margin-right: 93px;
+  color: #000000;
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 .style {
-    text-decoration: none;
+  text-decoration: none;
 }
 .logo-words {
-    color: var(--main-brand-color);
+  color: var(--main-brand-color);
+}
+.navigation .list:not(:last-child) {
+  margin-right: 50px;
 }
 .link {
-    color: var(--main-text-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  color: var(--main-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 .link:hover,
 .link:focus,
 .link:active {
-    color: var(--main-brand-color);
+  color: var(--main-brand-color);
 }
 a.current {
-    color: var(--main-brand-color);
+  color: var(--main-brand-color);
 }
 
-
+.contacts-list {
+  display: flex;
+  margin-left: auto;
+}
+.contacts-list .list:not(:last-child) {
+  margin-right: 50px;
+}
 .contact {
-    color: var(--second-text-color);
-    font-weight: 500;
-font-size: 14px;
-line-height: 1.18;
-letter-spacing: 0.02em;
+  color: var(--second-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
 }
 .contact:hover {
-    color: var(--main-brand-color);
+  color: var(--main-brand-color);
 }
 .list {
-list-style: none;
+  list-style: none;
 }
 
 /* main portfolio */
 main {
-    background-color: var(--main-background-color);
+  background-color: var(--main-background-color);
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.portfolio-list {
+  display: flex;
+  padding-top: 94px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.portfolio-list .list {
+  justify-content: center;
+}
+.portfolio-list .list:not(:last-child) {
+  margin-right: 8px;
+}
+
+.project-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 34px;
+}
+h1 .container {
+  width: 1164px;
+}
+
+.project-list .list {
+  margin-right: 30px;
+  margin-bottom: 30px;
+  border: 1px solid #eeeeee;
+}
+.project-list .list:nth-child(3n) {
+  margin-right: 0;
+}
+.project-list .list:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 button {
-    color: var(--main-text-color);
-    background-color: #F5F4FA;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    text-align: center;
-    letter-spacing: 0.03em;
+  border: 0;
+  padding: 6px 22px;
+  border-radius: 4px;
+  color: var(--main-text-color);
+  background-color: #f5f4fa;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 button:hover,
 button:focus {
-    background-color: var(--main-brand-color);
-    color: #FFFFFF;
-    cursor: pointer;
+  background-color: var(--main-brand-color);
+  color: #ffffff;
+  cursor: pointer;
 }
 .project {
-    text-decoration: none;
-
+  display: block;
+  text-decoration: none;
+}
+img {
+  display: block;
+}
+.project img {
+  margin-bottom: 20px;
 }
 .project-name {
-    color: var(--main-text-color);
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+  display: block;
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-bottom: 4px;
+  color: var(--main-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+.project-type {
+  display: block;
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-bottom: 20px;
 }
 
 .project-type,
 .position {
-    color: var(--second-text-color);
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.03em;
-    
+  color: var(--second-text-color);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
 }
 /* main index */
+
 .hero {
-    color: #ffffff;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+
+  width: 696px;
+  align-items: center;
+  color: #ffffff;
+
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 .box {
-    background-color: var(--second-background-color);
-    
+  text-align: center;
+  margin-bottom: 40px;
+  background-color: var(--second-background-color);
 }
 .btn {
-    background-color: var(--main-brand-color);
-    color: #ffffff;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.06em;
-    margin: 0 auto;
-    
+  border-radius: 4px;
+  padding: 10px 32px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--main-brand-color);
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  display: flex;
+  align-items: center;
+
+  letter-spacing: 0.06em;
 }
 .btn:hover {
-    background-color: #188CE8;
+  background-color: #188ce8;
+}
+.features h2 {
+  color: transparent;
+}
+.features {
+  margin-bottom: 94px;
+}
+.features-list {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 94px;
+}
+
+.features-list .list {
+  width: calc((100%-3 * 30px) / 4);
+}
+.features-list .list:not(:last-child) {
+  margin-right: 30px;
 }
 .feature {
-    font-weight: 700;
-font-size: 14px;
-line-height: 1.14;
-text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
 .description {
-    color: var(--second-text-color);
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
+  color: var(--second-text-color);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+}
+.work-sect {
+  margin-bottom: 94px;
+}
+.work-title {
+  margin-bottom: 50px;
+}
+.work-title-list {
+  display: flex;
+}
+.work-title-list .list:not(:last-child) {
+  margin-right: 30px;
+}
+.team-sect {
+  padding-bottom: 94px;
+  background-color: #f5f4fa;
+}
+.team-title {
+  margin-bottom: 50px;
 }
 .work-title,
-.team {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
+.team-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+.team-list {
+  display: flex;
+}
+
+.team-list .list:not(:last-child) {
+  margin-right: 30px;
+}
+.team-list .list {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.team-list img {
+  margin-bottom: 30px;
 }
 .teammate {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
 }
 .position {
-    line-height: 1.19;
-    text-align: center;
+  margin-bottom: 30px;
+  line-height: 1.19;
+  text-align: center;
 }
 /* footer */
+footer .container {
+  flex-direction: column;
+}
 .footer-logo {
-    color: #FFFFFF;
-    font-family: 'Raleway', serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    text-decoration: none;
+  display: inline-block;
+  margin-top: 60px;
+  margin-bottom: 20px;
+  color: #ffffff;
+  font-family: 'Raleway', serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  text-decoration: none;
 }
 .post-address,
 address a,
 .foot-contact {
-    color: #FFFFFF;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    text-decoration: none;
-    font-style: normal;
+  color: #ffffff;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  font-style: normal;
 }
 footer .foot-contact {
-    color: rgba(255, 255, 255, 0.6);
-
+  color: rgba(255, 255, 255, 0.6);
 }
 footer {
-    background-color: var(--second-background-color);
+  background-color: var(--second-background-color);
 }
 .post-address,
 .foot-contact {
-    cursor: pointer
+  display: block;
+  margin-bottom: 9px;
+  cursor: pointer;
+}
+.contact.foot-contact.tel {
+  margin-bottom: 50px;
 }
