--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,7 @@ main {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
 .portfolio-list {
   display: flex;
   padding-top: 94px;
@@ -140,6 +141,7 @@ main {
   display: flex;
   flex-wrap: wrap;
   padding-top: 34px;
+  padding-bottom: 94px;
 }
 h1 .container {
   width: 1164px;
@@ -318,6 +320,7 @@ img {
   margin-right: 30px;
 }
 .team-list .list {
+  background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
