--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,10 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 /* header */
 
 header .container {
@@ -126,7 +130,6 @@ main {
 
 .portfolio-list {
   display: flex;
-  padding-top: 94px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -141,7 +144,6 @@ main {
   display: flex;
   flex-wrap: wrap;
   padding-top: 34px;
-  padding-bottom: 94px;
 }
 h1 .container {
   width: 1164px;
@@ -259,13 +261,10 @@ img {
 .features h2 {
   color: transparent;
 }
-.features {
-  margin-bottom: 94px;
-}
+
 .features-list {
   display: flex;
   justify-content: space-between;
-  padding-top: 94px;
 }
 
 .features-list .list {
@@ -286,9 +285,7 @@ img {
   font-size: 14px;
   line-height: 1.71;
 }
-.work-sect {
-  margin-bottom: 94px;
-}
+
 .work-title {
   margin-bottom: 50px;
 }
@@ -299,7 +296,6 @@ img {
   margin-right: 30px;
 }
 .team-sect {
-  padding-bottom: 94px;
   background-color: #f5f4fa;
 }
 .team-title {
